--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -25,7 +25,7 @@
       </property>
      </widget>
     </item>
-    <item row="3" column="0">
+    <item row="4" column="0">
      <widget class="QPushButton" name="pb_send">
       <property name="text">
        <string>Send</string>
@@ -38,6 +38,9 @@
        <string>PushButton</string>
       </property>
      </widget>
+    </item>
+    <item row="3" column="0">
+     <widget class="QSpinBox" name="sb_counter"/>
     </item>
    </layout>
   </widget>
