--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -466,6 +466,9 @@
           <property name="text">
            <string>Remove Sign</string>
           </property>
+          <property name="icon">
+           <iconset theme="remove"/>
+          </property>
          </widget>
         </item>
        </layout>
@@ -475,20 +478,10 @@
         <string>Navigation</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_2">
-        <item row="6" column="2">
-         <widget class="QPushButton" name="exportNavMarkerButton">
-          <property name="toolTip">
-           <string>Export all navigation markers to a xml file.</string>
-          </property>
+        <item row="4" column="0" colspan="4">
+         <widget class="QLabel" name="lb_driving_tasks">
           <property name="text">
-           <string>Export Marker</string>
-          </property>
-         </widget>
-        </item>
-        <item row="5" column="0" colspan="3">
-         <widget class="QListWidget" name="drivingTasksListWidget">
-          <property name="toolTip">
-           <string>Displays the driving instructions in order of the navigation marker above.</string>
+           <string>Driving tasks:</string>
           </property>
          </widget>
         </item>
@@ -502,17 +495,21 @@
           </property>
          </widget>
         </item>
-        <item row="6" column="0">
-         <widget class="QPushButton" name="importNavMarkerButton">
-          <property name="toolTip">
-           <string>Import navigation marker form a xml file.</string>
-          </property>
+        <item row="0" column="0" colspan="4">
+         <widget class="QLabel" name="lb_navigation_markers">
           <property name="text">
-           <string>Import Marker</string>
+           <string>Navigation markers:</string>
           </property>
          </widget>
         </item>
-        <item row="3" column="2">
+        <item row="5" column="0" colspan="4">
+         <widget class="QListWidget" name="drivingTasksListWidget">
+          <property name="toolTip">
+           <string>Displays the driving instructions in order of the navigation marker above.</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="3">
          <widget class="QPushButton" name="removeAllNavigationMarkerButton">
           <property name="toolTip">
            <string>Removes all marker.</string>
@@ -526,7 +523,7 @@
           </property>
          </widget>
         </item>
-        <item row="1" column="0" colspan="3">
+        <item row="1" column="0" colspan="4">
          <widget class="QNavigationMarkerListWidget" name="navigationMarkerListWidget">
           <property name="toolTip">
            <string>Change the order of the navigation marker by drag and drop. Click left to choose a marker or click right to delete choosen marker.</string>
@@ -536,7 +533,35 @@
           </property>
          </widget>
         </item>
-        <item row="3" column="1">
+        <item row="6" column="0" colspan="2">
+         <widget class="QPushButton" name="importNavMarkerButton">
+          <property name="toolTip">
+           <string>Import navigation marker form a xml file.</string>
+          </property>
+          <property name="text">
+           <string>Import Marker</string>
+          </property>
+          <property name="icon">
+           <iconset theme="document-open">
+            <normaloff>.</normaloff>.</iconset>
+          </property>
+         </widget>
+        </item>
+        <item row="6" column="2" colspan="2">
+         <widget class="QPushButton" name="exportNavMarkerButton">
+          <property name="toolTip">
+           <string>Export all navigation markers to a xml file.</string>
+          </property>
+          <property name="text">
+           <string>Export Marker</string>
+          </property>
+          <property name="icon">
+           <iconset theme="document-save">
+            <normaloff>.</normaloff>.</iconset>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="1" colspan="2">
          <widget class="QPushButton" name="removeNavigationMarkerButton">
           <property name="toolTip">
            <string>Removes choosen marker.</string>
@@ -547,20 +572,6 @@
           <property name="icon">
            <iconset theme="remove">
             <normaloff>../../../.designer/backup</normaloff>../../../.designer/backup</iconset>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="0" colspan="3">
-         <widget class="QLabel" name="lb_navigation_markers">
-          <property name="text">
-           <string>Navigation markers:</string>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="0" colspan="3">
-         <widget class="QLabel" name="lb_driving_tasks">
-          <property name="text">
-           <string>Driving tasks:</string>
           </property>
          </widget>
         </item>
