[ui] added restart notice

--- a/src/dialog_preferences.ui
+++ b/src/dialog_preferences.ui
@@ -51,7 +51,7 @@
      </property>
     </widget>
    </item>
-   <item row="5" column="0" colspan="2">
+   <item row="6" column="0" colspan="2">
     <widget class="QDialogButtonBox" name="bb">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -64,14 +64,14 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="0">
+   <item row="3" column="0">
     <widget class="QLabel" name="lb_car_length">
      <property name="text">
       <string>Car length (mm)</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="1">
+   <item row="3" column="1">
     <widget class="QSpinBox" name="sb_car_length">
      <property name="maximum">
       <number>45000</number>
@@ -81,21 +81,21 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="0">
+   <item row="4" column="0">
     <widget class="QLabel" name="lb_car_width">
      <property name="text">
       <string>Car width (mm)</string>
      </property>
     </widget>
    </item>
-   <item row="4" column="0">
+   <item row="5" column="0">
     <widget class="QLabel" name="lb_background">
      <property name="text">
       <string>Background color (0 - 255)</string>
      </property>
     </widget>
    </item>
-   <item row="4" column="1">
+   <item row="5" column="1">
     <widget class="QSpinBox" name="sb_background">
      <property name="maximum">
       <number>255</number>
@@ -105,13 +105,20 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="1">
+   <item row="4" column="1">
     <widget class="QSpinBox" name="sb_car_width">
      <property name="maximum">
       <number>5000</number>
      </property>
      <property name="value">
       <number>120</number>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="0" colspan="2">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>The following settings needs a restart to take effect:</string>
      </property>
     </widget>
    </item>
