--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -116,10 +116,10 @@
            <item row="0" column="1">
             <widget class="QLabel" name="connection_val_label">
              <property name="styleSheet">
-              <string notr="true">background-color: rgb(255, 255, 255);</string>
+              <string notr="true">background-color: red;</string>
              </property>
              <property name="text">
-              <string>Dummy</string>
+              <string>not connected</string>
              </property>
             </widget>
            </item>
@@ -136,7 +136,7 @@
               <string notr="true">background-color: rgb(255, 255, 255);</string>
              </property>
              <property name="text">
-              <string>Dummy</string>
+              <string>-</string>
              </property>
             </widget>
            </item>
@@ -153,7 +153,7 @@
               <string notr="true">background-color: rgb(255, 255, 255);</string>
              </property>
              <property name="text">
-              <string>Dummy</string>
+              <string>-</string>
              </property>
             </widget>
            </item>
@@ -170,7 +170,7 @@
               <string notr="true">background-color: rgb(255, 255, 255);</string>
              </property>
              <property name="text">
-              <string>Dummy</string>
+              <string>-</string>
              </property>
             </widget>
            </item>
@@ -187,7 +187,7 @@
               <string notr="true">background-color: rgb(255, 255, 255);</string>
              </property>
              <property name="text">
-              <string>Dummy</string>
+              <string>-</string>
              </property>
             </widget>
            </item>
@@ -204,7 +204,7 @@
               <string notr="true">background-color: rgb(255, 255, 255);</string>
              </property>
              <property name="text">
-              <string>Dummy</string>
+              <string>-</string>
              </property>
             </widget>
            </item>
@@ -219,10 +219,31 @@
           <layout class="QVBoxLayout" name="verticalLayout_3">
            <item>
             <widget class="QPushButton" name="map_load_button">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
              <property name="text">
               <string>Load Map from File and Push</string>
              </property>
             </widget>
+           </item>
+           <item>
+            <layout class="QFormLayout" name="formLayout_2">
+             <item row="1" column="0">
+              <widget class="QLabel" name="map_xml_label">
+               <property name="text">
+                <string>Map              </string>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="1">
+              <widget class="QLineEdit" name="map_xml_val_label">
+               <property name="text">
+                <string>-</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
            </item>
           </layout>
          </widget>
@@ -235,6 +256,9 @@
           <layout class="QVBoxLayout" name="verticalLayout_6">
            <item>
             <widget class="QPushButton" name="car_config_load_button">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
              <property name="text">
               <string>Load Config from File</string>
              </property>
@@ -242,20 +266,17 @@
            </item>
            <item>
             <layout class="QFormLayout" name="formLayout">
-             <item row="0" column="0">
+             <item row="1" column="0">
               <widget class="QLabel" name="car_config_label">
                <property name="text">
                 <string>Config          </string>
                </property>
               </widget>
              </item>
-             <item row="0" column="1">
-              <widget class="QLabel" name="car_config_val_label">
-               <property name="styleSheet">
-                <string notr="true">background-color: rgb(255, 255, 255);</string>
-               </property>
+             <item row="1" column="1">
+              <widget class="QLineEdit" name="car_config_val_label">
                <property name="text">
-                <string>Dummy</string>
+                <string>-</string>
                </property>
               </widget>
              </item>
@@ -326,7 +347,7 @@
            <item>
             <layout class="QHBoxLayout" name="horizontalLayout_2">
              <item>
-              <widget class="QPushButton" name="pushButton">
+              <widget class="QPushButton" name="start_ad_button">
                <property name="enabled">
                 <bool>false</bool>
                </property>
@@ -336,7 +357,7 @@
               </widget>
              </item>
              <item>
-              <widget class="QPushButton" name="pushButton_2">
+              <widget class="QPushButton" name="start_rc_button">
                <property name="enabled">
                 <bool>false</bool>
                </property>
@@ -348,7 +369,7 @@
             </layout>
            </item>
            <item>
-            <widget class="QPushButton" name="pushButton_3">
+            <widget class="QPushButton" name="running_stop_button">
              <property name="enabled">
               <bool>false</bool>
              </property>
@@ -361,12 +382,12 @@
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="pushButton_4">
+         <widget class="QPushButton" name="abort_button">
           <property name="enabled">
            <bool>false</bool>
           </property>
           <property name="styleSheet">
-           <string notr="true">background-color: rgb(204, 0, 0);</string>
+           <string notr="true">background-color: red;</string>
           </property>
           <property name="text">
            <string>Abort</string>
@@ -798,7 +819,6 @@
     <property name="title">
      <string>Map</string>
     </property>
-    <addaction name="actionOpenMap"/>
     <addaction name="actionExportMap"/>
    </widget>
    <addaction name="menuGeneral"/>
@@ -820,7 +840,7 @@
   </action>
   <action name="actionPreferences">
    <property name="icon">
-    <iconset theme="preferences">
+    <iconset theme="preferences-desktop">
      <normaloff>.</normaloff>.</iconset>
    </property>
    <property name="text">
@@ -855,18 +875,6 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+Shift+D</string>
-   </property>
-  </action>
-  <action name="actionOpenMap">
-   <property name="icon">
-    <iconset theme="document-open">
-     <normaloff>../../../.designer/backup</normaloff>../../../.designer/backup</iconset>
-   </property>
-   <property name="text">
-    <string>Open Map from XML</string>
-   </property>
-   <property name="shortcut">
-    <string>Ctrl+O</string>
    </property>
   </action>
   <action name="actionExportMap">
