basic log model added: model for loading content to table view in log analyzer dialog

--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -1068,7 +1068,7 @@
   </action>
   <action name="actionLogAnalyzer">
    <property name="text">
-    <string>Log Analyzer</string>
+    <string>LogSerialization Analyzer</string>
    </property>
   </action>
  </widget>
