--- a/src/dialog_log_analyzer.ui
+++ b/src/dialog_log_analyzer.ui
@@ -32,7 +32,7 @@
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_6">
          <item>
-          <widget class="QTableWidget" name="tableWidget"/>
+          <widget class="QTableView" name="tableView"/>
          </item>
         </layout>
        </widget>
