--- a/src/dialog_preferences.ui
+++ b/src/dialog_preferences.ui
@@ -457,7 +457,7 @@
      </widget>
      <widget class="QWidget" name="log_config_tab">
       <attribute name="title">
-       <string>Log</string>
+       <string>LogSerialization</string>
       </attribute>
       <layout class="QFormLayout" name="formLayout_6">
        <item row="1" column="0">
@@ -499,7 +499,7 @@
             </sizepolicy>
            </property>
            <property name="text">
-            <string>Log Memory Location</string>
+            <string>LogSerialization Memory Location</string>
            </property>
           </widget>
          </item>
