--- a/src/dialog_log_analyzer.ui
+++ b/src/dialog_log_analyzer.ui
@@ -102,6 +102,12 @@
                  <height>16777215</height>
                 </size>
                </property>
+               <property name="currentIndex">
+                <number>-1</number>
+               </property>
+               <property name="minimumContentsLength">
+                <number>0</number>
+               </property>
                <property name="duplicatesEnabled">
                 <bool>false</bool>
                </property>
@@ -127,9 +133,22 @@
             </spacer>
            </item>
            <item>
-            <widget class="QPushButton" name="pushButton">
+            <widget class="QPushButton" name="saveButton">
+             <property name="toolTip">
+              <string comment="Please select first a file in the combo box to save changes under this file" extracomment="Please select first a file in the combo box to save changes under this file"/>
+             </property>
+             <property name="toolTipDuration">
+              <number>3000</number>
+             </property>
              <property name="text">
               <string>Save</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="saveAsButton">
+             <property name="text">
+              <string>Save as...</string>
              </property>
             </widget>
            </item>
